fixes at top block on mobile

--- a/src/components/sections/TopBlock/style.module.scss
+++ b/src/components/sections/TopBlock/style.module.scss
@@ -125,7 +125,7 @@
   align-items: center;
   z-index: 5;
   position: absolute;
-  bottom: 33px;
+  bottom: 15px;
   width: 100%;
 
   @media screen and (min-width: $desktop) {
